package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_binary",
     "ocaml_ns_library",
     "ocaml_module",
)

DEPS_1 = [
    "@ocaml//compiler-libs/common"
]

##############################
####  Executable Targets  ####
ocaml_binary(
    name     = "gen_stubs.exe",
    main     = ":Gen_stubs",
    visibility = ["//visibility:public"],
)

######################## Modules & Signatures ########################
ocaml_module(
    name          = "Gen_stubs",
    struct        = "gen_stubs.ml",
    deps          = DEPS_1,
)


