package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_ns_archive",
     "ocaml_module",
     "ppx_executable",
)

JS_OF_OCAML_LWT_DEPS = [
        "//lib/js_of_ocaml:js_of_ocaml",
        "@lwt//lib/lwt"
]



#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(
    name       = "js_of_ocaml_lwt",
    ns         = "js_of_ocaml_lwt",
    manifest = [
        ":Import",
        ":Js_of_ocaml_lwt",
        ":Lwt_file",
        ":Lwt_js",
        ":Lwt_js_events",
        ":Lwt_jsonp",
        ":Lwt_xmlHttpRequest"
    ],
)

#############################
####  Singleton Targets  ####
ocaml_module(
    name          = "Lwt_file",
    struct        = "lwt_file.ml",
    sig           = "lwt_file.mli",
    deps          = JS_OF_OCAML_LWT_DEPS + [
        ":Import"
    ],
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)

ocaml_module(
    name          = "Lwt_js",
    struct        = "lwt_js.ml",
    sig           = "lwt_js.mli",
    deps          = JS_OF_OCAML_LWT_DEPS + [
        ":Import"
    ],
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)

ocaml_module(
    name          = "Lwt_js_events",
    struct        = "lwt_js_events.ml",
    sig           = "lwt_js_events.mli",
    deps          = JS_OF_OCAML_LWT_DEPS + [
        ":Import",
        ":Lwt_js"
    ],
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)

ocaml_module(
    name          = "Lwt_jsonp",
    struct        = "lwt_jsonp.ml",
    sig           = "lwt_jsonp.mli",
    deps          = JS_OF_OCAML_LWT_DEPS + [
        ":Import",
        ":Lwt_js"
    ],
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)

ocaml_module(
    name          = "Lwt_xmlHttpRequest",
    struct        = "lwt_xmlHttpRequest.ml",
    sig           = "lwt_xmlHttpRequest.mli",
    deps          = JS_OF_OCAML_LWT_DEPS + [
        ":Import"
    ],
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)

ocaml_module(
    name          = "Import",
    struct        = "import.ml",
    deps          = JS_OF_OCAML_LWT_DEPS,
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)

ocaml_module(
    name          = "Js_of_ocaml_lwt",
    struct        = "js_of_ocaml_lwt.ml",
    deps          = JS_OF_OCAML_LWT_DEPS + [
        ":Lwt_file",
        ":Lwt_js",
        ":Lwt_js_events",
        ":Lwt_jsonp",
        ":Lwt_xmlHttpRequest"
    ],
    ppx           = ":JS_OF_OCAML_LWT.ppx",
)


###############
ppx_executable(
    name    = "JS_OF_OCAML_LWT.ppx",
    main    = ":Ppx_driver",
    manifest = [
        "//ppx/ppx_js/lib:ppx_js_rewriter"
    ],
)

#############
ocaml_module(
    name       = "Ppx_driver",
    struct     = ":ppx_driver.ml",
    visibility = ["//visibility:public"],
    deps       = ["@ppxlib//lib/ppxlib"],
)

########
genrule(
    name = "__ppx_driver__",
    outs = ["ppx_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ])
)

