package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_archive",
     "ocaml_ns_archive",
     "ocaml_module",
     "ppx_executable",
     "ppx_module",
)

DEPS_1 = [
    "//lib/js_of_ocaml:js_of_ocaml",
    "@opam_lwt//lib/lwt"
]

#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(  ##
    name       = "js_of_ocaml_lwt",
    ns         = "js_of_ocaml_lwt",
    manifest = [
        ":Import",
        ":Js_of_ocaml_lwt",
        ":Lwt_file",
        ":Lwt_js",
        ":Lwt_js_events",
        ":Lwt_jsonp",
        ":Lwt_xmlHttpRequest"
    ],
)

######################## Modules & Signatures ########################
## this-is-main #f
ocaml_module(
    name          = "Lwt_file",
    struct        = "lwt_file.ml",
    sig           = "lwt_file.mli",
    deps          = DEPS_1 + [
        ":Import"
    ],
    ppx           = ":ppx_1.exe", #X2
)

## this-is-main #f
ocaml_module(
    name          = "Lwt_js",
    struct        = "lwt_js.ml",
    sig           = "lwt_js.mli",
    deps          = DEPS_1 + [
        ":Import"
    ],
    ppx           = ":ppx_1.exe", #X2
)

## this-is-main #f
ocaml_module(
    name          = "Lwt_js_events",
    struct        = "lwt_js_events.ml",
    sig           = "lwt_js_events.mli",
    deps          = DEPS_1 + [
        ":Import",
        ":Lwt_js"
    ],
    ppx           = ":ppx_1.exe", #X2
)

## this-is-main #f
ocaml_module(
    name          = "Lwt_jsonp",
    struct        = "lwt_jsonp.ml",
    sig           = "lwt_jsonp.mli",
    deps          = DEPS_1 + [
        ":Import",
        ":Lwt_js"
    ],
    ppx           = ":ppx_1.exe", #X2
)

## this-is-main #f
ocaml_module(
    name          = "Lwt_xmlHttpRequest",
    struct        = "lwt_xmlHttpRequest.ml",
    sig           = "lwt_xmlHttpRequest.mli",
    deps          = DEPS_1 + [
        ":Import"
    ],
    ppx           = ":ppx_1.exe", #X2
)

ocaml_module(
    name          = "Import",
    struct        = "import.ml",
    deps          = DEPS_1,
    ppx           = ":ppx_1.exe", #X1
)

ocaml_module(
    name          = "Js_of_ocaml_lwt",
    struct        = "js_of_ocaml_lwt.ml",
    deps          = DEPS_1 + [
        ":Lwt_file",
        ":Lwt_js",
        ":Lwt_js_events",
        ":Lwt_jsonp",
        ":Lwt_xmlHttpRequest"
    ],
    ppx           = ":ppx_1.exe", #X1
)


###############
ppx_executable(
    name    = "ppx_1.exe",
    main    = ":Ppx_driver",
    deps = [
        "//ppx/ppx_js/lib:ppx_js_rewriter"
    ],
)

#############
ppx_module(
    name       = "Ppx_driver",
    struct     = ":ppx_driver.ml",
    visibility = ["//visibility:public"],
    deps       = ["@opam_ppxlib//lib/ppxlib"],
)

########
genrule(
    name = "__ppx_driver__",
    outs = ["ppx_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ])
)

