package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_binary",
     "ocaml_ns_library",
     "ocaml_module",
)

##############################
####  Executable Targets  ####
ocaml_binary(
    name     = "select.exe",
    main     = ":Select",
    visibility = ["//visibility:public"],
)

######################## Modules & Signatures ########################
ocaml_module(
    name          = "Select",
    struct        = "select.ml",
)


